# Global-Macro-Monitor

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: refresh-monitor.yml
app/: __init__.py
app/consensus/: __init__.py  deviation.py  fetchers.py  parser.py  scoring.py  sources.py
app/dashboard/: app.py
app/data/: china_ingestion.py  eurozone_ingestion.py  fetchers.py  manual_loader.py  market_overlay_ingestion.py
app/factors/: __init__.py  features.py  scoring.py
app/regime/: __init__.py  alerts.py  allocation.py  change_detection.py  classifier.py  evaluation.py  global_allocation.py  global_monitor.py  nowcast.py
app/utils/: config.py  logging.py
configs/: countries.yaml  indicators.yaml  weights.yaml
global_macro_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_alerts.py  test_change_detection.py  test_change_detection_backward_compat.py  test_china_ingestion.py  test_china_scoring.py  test_china_valuation.py  test_config.py  test_consensus.py  test_consensus_fetchers.py  test_country_features.py  test_dashboard.py  test_eurozone_ingestion.py  test_eurozone_scoring.py  test_eurozone_valuation.py  test_evaluation.py  test_features.py  test_fetchers.py  test_global_allocation.py  test_global_monitor.py  test_international_market_client.py  test_main_refresh.py  test_manual_loader.py  test_market_overlay_ingestion.py  test_nowcast.py  test_public_site_client.py  test_regime.py  test_scoring.py  test_source_adapters.py  test_us_market_client.py  test_valuation.py
(+140 files in other folders)
